--- a/AddictingGames/index.html
+++ b/AddictingGames/index.html
@@ -10,7 +10,7 @@ body {
 
 .header {
   background-color: #f1f1f1;
-  padding: 30px;
+  padding: 5px;
   text-align: center;
 }
 
@@ -29,7 +29,8 @@ body {
 body, html {
     height: 100%;
     margin: 0;
-    font-family: Arial;
+    font-family: Cooper Black;
+    font-size: 40px;
 }
 
 /* Style tab links */
@@ -57,19 +58,19 @@ body, html {
     height: 100%;
 }
 
-#Home {background-color: red;}
-#Game1 {background-color: green;}
-#Game2 {background-color: blue;}
-#Game3 {background-color: maroon;}
-#Profile {background-color: OLIVE;}
+#Home {background-color: #ffeeee;}
+#Game1 {background-color: #eeffee;}
+#Game2 {background-color: #ececff;}
+#Game3 {background-color: #fff8ed;}
+#Profile {background-color: #f2f2e1;}
 
 </style>
 <body>
 
 <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen">Home</button>
-<button class="tablink" onclick="openPage('Game1', this, 'green')">Game1</button>
-<button class="tablink" onclick="openPage('Game2', this, 'blue')">Game2</button>
-<button class="tablink" onclick="openPage('Game3', this, 'maroon')">Game3</button>
+<button class="tablink" onclick="openPage('Game1', this, 'green')">Game 1</button>
+<button class="tablink" onclick="openPage('Game2', this, 'blue')">Game 2</button>
+<button class="tablink" onclick="openPage('Game3', this, '#e78800')">Game 3</button>
 <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')">Profile</button>
 
 <div id="Home" class="tabcontent">
