--- a/AddictingGames/index.html
+++ b/AddictingGames/index.html
@@ -9,55 +9,59 @@
   <link rel="stylesheet" href="stylesheets/styles.css">
 </head>
 
-<body>
+<body class="body">
 
   <div class="header">
-  
-    <img class="logo_item" src="images/logo.png" alt="Addicting Games Logo"/>
+    <img class="logo_item" height="15%" src="images/logo.png" alt="Addicting Games Logo"/>
+    <form class="loginForm" name="myForm" action="#" onsubmit="return validateForm()" method="post">
+        Name: <input type="text" name="fname">
+              <input type="submit" value="Login">
+    </form>
   </div>
   
 
   <!-- //buttons on front page -->
   <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen"><img class="icons" src="images/home.ico" alt="HomeIcon"/>Home</button>
-  <button class="tablink" onclick="openPage('Game1', this, 'green')"><img class="icons" src="images/pac.ico" alt="PacmanIcon"/>Game1</button>
-  <button class="tablink" onclick="openPage('Game2', this, 'blue')"><img class="icons" src="images/snake.ico" alt="SnakeIcon"/>Game2</button>
-  <button class="tablink" onclick="openPage('Game3', this, '#e78800')"><img class="icons" src="images/cube.ico" alt="CubeIcon"/>Game3</button>
+  <button class="tablink" onclick="openPage('Pacman', this, 'green')"><img class="icons" src="images/pac.ico" alt="PacmanIcon"/>Pac</button>
+  <button class="tablink" onclick="openPage('SnakeGame', this, 'blue')"><img class="icons" src="images/snake.ico" alt="SnakeIcon"/>Snake</button>
+  <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/cube.ico" alt="Run!"/>Run!</button>
+  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/cube.ico" alt="Pong"/>Pong</button>
   <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')"><img class="icons" src="images/profile.ico" alt="ProfileIcon"/>Profile</button>
 
 
   <!-- //one div per tab, depends on what is clicked -->
   <div id="Home" class="tabcontent">
-
+    
   </div>
 
-  <div id="Game1" class="tabcontent">
-    <embed width="800" height="600" base="https://external.kongregate-games.com/gamez/0024/7191/live/" src="https://external.kongregate-games.com/gamez/0024/7191/live/embeddable_247191.swf" type="application/x-shockwave-flash">
-
-    <br/>Play free games at <a href="https://www.kongregate.com/">Kongregate</a>
-
+  <div id="Pacman"  class="tabcontent">
+    <iframe width="530" height="650" src="games/pacman.html"></iframe>
   </div>
 
-  <div id="Game2" class="tabcontent">
-    <embed width="640" height="480" base="https://external.kongregate-games.com/gamez/0013/7834/live/" src="https://external.kongregate-games.com/gamez/0013/7834/live/embeddable_137834.swf" type="application/x-shockwave-flash">
-
-    <br/>Play free games at <a href="https://www.kongregate.com/">Kongregate</a>
+  <div id="SnakeGame" class="tabcontent">
+    <iframe scrolling="no" width="500" height="285"  src="games/snake.html"></iframe>
   </div>
 
-  <div id="Game3" class="tabcontent">
-    <embed width="640" height="480" base="https://external.kongregate-games.com/gamez/0004/3653/live/" src="https://external.kongregate-games.com/gamez/0004/3653/live/embeddable_43653.swf" type="application/x-shockwave-flash">
-
-    <br/>Play free games at <a href="https://www.kongregate.com/">Kongregate</a>
+  <div id="Run!" class="tabcontent">
+    <iframe scrolling="no" width="1000" height="280"  src="games/run.html"></iframe>
   </div>
 
+  <div id="Pong" class="tabcontent">
+    <iframe scrolling="no" width="1000" height="280"  src="games/pong.html"></iframe>
+  </div>
+  
   <div id="Profile" class="tabcontent">
     <h3>Profile</h3>
     <p>Coming Soon.</p>
 
     <div class="loader"></div>
 
-
   </div>
 <script src="scripts/main.js" charset="utf-8"></script>
 </body>
+
+<footer>
+    <div class="footerText">hello</div>
+</footer>
 
 </html>
