--- a/AddictingGames/index.html
+++ b/AddictingGames/index.html
@@ -21,12 +21,12 @@
 
   <main class="main-content">
   <!-- //buttons on front page -->
-  <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen"><img class="icons" src="images/home.ico" alt="HomeIcon"/>Home</button>
-  <button class="tablink" onclick="openPage('Pacman', this, 'green')"><img class="icons" src="images/pac.ico" alt="PacmanIcon"/>Pac</button>
-  <button class="tablink" onclick="openPage('SnakeGame', this, 'blue')"><img class="icons" src="images/snake.ico" alt="SnakeIcon"/>Snake</button>
-  <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/cube.ico" alt="Run!"/>Run!</button>
-  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/cube.ico" alt="Pong"/>Pong</button>
-  <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')"><img class="icons" src="images/profile.ico" alt="ProfileIcon"/>Profile</button>
+  <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen"><img class="icons" src="images/home.png" alt="HomeIcon"/>Home</button>
+  <button class="tablink" onclick="openPage('Pacman', this, 'green')"><img class="icons" src="images/pac.png" alt="PacmanIcon"/>Pac</button>
+  <button class="tablink" onclick="openPage('SnakeGame', this, 'blue')"><img class="icons" src="images/snake.png" alt="SnakeIcon"/>Snake</button>
+  <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/cube.png" alt="Run!"/>Run!</button>
+  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/cube.png" alt="Pong"/>Pong</button>
+  <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')"><img class="icons" src="images/profile.png" alt="ProfileIcon"/>Profile</button>
 
 
   <!-- //one div per tab, depends on what is clicked -->
@@ -60,7 +60,9 @@
   </div>
 </main>
 <footer>
-    <div class="footerText">hello</div>
+	<div class="footerText">Addicting games was made by gamers like YOU!</div>
+	<div class="footerText2">This is Addicting Games, a student driven website that provides HTML and JS games right to your browser!</div>
+	<div class="footerText3">©2018 NAMES</div>
 </footer>
 <script src="scripts/main.js" charset="utf-8"></script>
 </body>
