--- a/AddictingGames/index.html
+++ b/AddictingGames/index.html
@@ -24,8 +24,8 @@
   <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen"><img class="icons" src="images/home.png" alt="HomeIcon"/>Home</button>
   <button class="tablink" onclick="openPage('Pacman', this, 'green')"><img class="icons" src="images/pac.png" alt="PacmanIcon"/>Pac</button>
   <button class="tablink" onclick="openPage('SnakeGame', this, 'blue')"><img class="icons" src="images/snake.png" alt="SnakeIcon"/>Snake</button>
-  <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/cube.png" alt="Run!"/>Run!</button>
-  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/cube.png" alt="Pong"/>Pong</button>
+  <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/run.png" alt="Run!"/>Run!</button>
+  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/pong.png" alt="Pong"/>Pong</button>
   <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')"><img class="icons" src="images/profile.png" alt="ProfileIcon"/>Profile</button>
 
 
@@ -37,19 +37,19 @@
   </div>
 
   <div id="Pacman"  class="tabcontent">
-    <iframe id="myframe" width="530" height="650" src="games/pacman.html"></iframe>
+    <p align="center"><iframe id="myframe" width="530" height="650" src="games/pacman.html"></iframe></p>
   </div>
 
   <div id="SnakeGame" class="tabcontent">
-    <iframe scrolling="no" width="500" height="285"  src="games/snake.html"></iframe>
+    <p align="center"><iframe scrolling="no" width="500" height="285"  src="games/snake.html"></iframe></p>
   </div>
 
   <div id="Run!" class="tabcontent">
-    <iframe scrolling="no" width="1000" height="280"  src="games/run.html"></iframe>
+    <p align="center"><iframe scrolling="no" width="1000" height="280"  src="games/run.html"></iframe></p>
   </div>
 
   <div id="Pong" class="tabcontent">
-    <iframe scrolling="no" width="1000" height="280"  src="games/pong.html"></iframe>
+    <p align="center"><iframe scrolling="no" width="1000" height="280"  src="games/pong.html"></iframe></p>
   </div>
 
   <div id="Profile" class="tabcontent">
@@ -60,9 +60,12 @@
   </div>
 </main>
 <footer>
-	<div class="footerText">Addicting games was made by gamers like YOU!</div>
-	<div class="footerText2">This is Addicting Games, a student driven website that provides HTML and JS games right to your browser!</div>
-	<div class="footerText3">©2018 NAMES</div>
+	<div>
+        <h2>Addicting games was made by gamers like YOU!</h2>
+        This is Addicting Games, a student driven website that provides HTML and JS games right to your browser!
+	</div>
+    
+	<div class="footerText3">©2018 Ramona Parker Noah Martin</div>
 </footer>
 <script src="scripts/main.js" charset="utf-8"></script>
 </body>
