changed footer txt and Noah's UI stuff

--- a/AddictingGames/index.html
+++ b/AddictingGames/index.html
@@ -21,18 +21,18 @@
 
   <main class="main-content">
   <!-- //buttons on front page -->
-  <button class="tablink" onclick="openPage('Home', this, 'red')" id="defaultOpen"><img class="icons" src="images/home.png" alt="HomeIcon"/>Home</button>
-  <button class="tablink" onclick="openPage('Pacman', this, 'green')"><img class="icons" src="images/pac.png" alt="PacmanIcon"/>Pac</button>
-  <button class="tablink" onclick="openPage('SnakeGame', this, 'blue')"><img class="icons" src="images/snake.png" alt="SnakeIcon"/>Snake</button>
+  <button class="tablink" onclick="openPage('Home', this, '#cfcd24')" id="defaultOpen"><img class="icons" src="images/home.png" alt="HomeIcon"/>Home</button>
+  <button class="tablink" onclick="openPage('Pacman', this, 'blue')"><img class="icons" src="images/pac.png" alt="PacmanIcon"/>Pac</button>
+  <button class="tablink" onclick="openPage('SnakeGame', this, 'green')"><img class="icons" src="images/snake.png" alt="SnakeIcon"/>Snake</button>
   <button class="tablink" onclick="openPage('Run!', this, '#e78800')"><img class="icons" src="images/run.png" alt="Run!"/>Run!</button>
-  <button class="tablink" onclick="openPage('Pong', this, '#e78800')"><img class="icons" src="images/pong.png" alt="Pong"/>Pong</button>
+  <button class="tablink" onclick="openPage('Pong', this, '#red')"><img class="icons" src="images/pong.png" alt="Pong"/>Pong</button>
   <button class="tablink" onclick="openPage('Profile', this, 'OLIVE')"><img class="icons" src="images/profile.png" alt="ProfileIcon"/>Profile</button>
 
 
   <!-- //one div per tab, depends on what is clicked -->
   <div id="Home" class="tabcontent">
     <div class="bodyIntro">
-
+    <img align="center" class="homePageImage" src="images/homepage.png" alt="homePageImage"/>
     </div>
   </div>
 
@@ -53,19 +53,29 @@
   </div>
 
   <div id="Profile" class="tabcontent">
-    <h3>Profile</h3>
-    <p>Coming Soon.</p>
+    <h3>Leader Board</h3>
+    <p>...coming soon.</p>
+    <img class="leaderBoard" src="images/leaderboard.png" alt="leaderBoard"/>
     <div class="loader"></div>
 
   </div>
 </main>
 <footer>
-	<div>
-        <h2>Addicting games was made by gamers like YOU!</h2>
-        This is Addicting Games, a student driven website that provides HTML and JS games right to your browser!
+	<div class="footerColumn1">
+        <h2>Addicting Games was made by gamers like YOU!</h2>
+        This is Addicting Games, a student driven website that provides HTML and JS games right 
+        to your browser! Please play our games to your heart's content. We promise you will become addicted
+        in no time at all!
 	</div>
     
-	<div class="footerText3">©2018 Ramona Parker Noah Martin</div>
+	<div class="footerColumn2">
+        <h2>Brought to you by the Super Great Games Foundation</h2>
+        All proceeds from this website will be used for food to feed the programmers. Why do they get hungry?
+        Don't they just sit and write code all day? Why should I have to pay for their food? Because you are
+        addicted to playing our games!
+	</div>
+    
+    <div class="footerTextCopy">©2018 Ramona Parker Noah Martin</div>
 </footer>
 <script src="scripts/main.js" charset="utf-8"></script>
 </body>
